--- a/TODO.org
+++ b/TODO.org
@@ -7,14 +7,14 @@
 
 * Fonctionnalites :
 ** 1
-*** TODO mdp
-*** TODO infos/commandes serv pour INFO --- Fait mais doit être complété avec les connexions serveur-serveur
+*** [SALTY-ed] mdp
+*** [SALTY-ed] infos/commandes serv pour INFO --- Fait mais doit être complété avec les connexions serveur-serveur
 time nom hostnames whois userinfo --- Pareil, manque whois, whowas
 *** TODO infos clients
 statut/grade diff entre chan
 
 ** 2
-*** TODO communication inter-serveurs
+*** [SALTY-ed] communication inter-serveurs
 ex client a serv 1 client b serv 2 PRIVMSG
 
 ** 3
