--- a/TODO.org
+++ b/TODO.org
@@ -3,49 +3,40 @@
 --- format :
 * type
 ** priorite
-*** NOM
+*** [STATUT] NOM
 
 * Fonctionnalites :
 ** 1
-*** [SALTY-ed] mdp
-*** [SALTY-ed] infos/commandes serv pour INFO --- Fait mais doit être complété avec les connexions serveur-serveur
-time nom hostnames whois userinfo --- Pareil, manque whois, whowas
-*** TODO infos clients
-statut/grade diff entre chan
-
-** 2
-*** [SALTY-ed] communication inter-serveurs
-ex client a serv 1 client b serv 2 PRIVMSG
-
-** 3
 *** TODO ERR_*
 *** TODO RPL_*
+*** TODO infos client statut/grade diff entre chan
 
 
 * Commands
 ** 1
+*** TODO temp parsing
 *** TODO QUIT
-*** TODO JOIN wPASS
-*** TODO PART
 *** TODO WHOIS/WHOWAS/!\/!\
 *** TODO ADMIN
+*** DONE JOIN wPASS
+*** DONE PART
 
 ** 2
-*** TODO OPER
-*** TODO LINKS
-*** TODO MODE
-*** TODO NAMES
+*** TODO NICK :fix
 *** TODO LIST
 *** TODO TOPIC
-*** TODO INVITE
 *** TODO KICK
-*** TODO KIlL
 *** TODO PING/PONG
 *** TODO ERROR
+*** DONE OPER
+*** DONE MODE
+*** DONE NAMES
+*** DONE INVITE
+*** DONE SALTED KIlL
 
 ** 3
-*** TODO SQUIT
-*** TODO CONNECT TRACE
+*** DONE SALTED SQUIT
+*** DONE SALTED CONNECT TRACE
 
 ** 4 [OPTIONAL]
 *** AWAY
@@ -56,3 +47,7 @@ ex client a serv 1 client b serv 2 PRIVMSG
 *** WALLOPS
 *** USERHOST
 *** ISON
+*** DONE SALTED LINKS
+*** DONE SALTED mdp
+*** DONE SALTED infos/commandes serv pour INFO --- Fait mais doit être complété avec les connexions serveur-serveurtime nom hostnames whois userinfo --- Pareil, manque whois, whowas
+*** DONE SALTED communication inter-serveurs ex client a serv 1 client b serv 2 PRIVMSG
